--- a/index.html
+++ b/index.html
@@ -1,7 +1,45 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>CleverCoffee</title>
-        
-    </head>
+  <head>
+    <title>CleverCoffee</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+    />
+  </head>
+  <body>
+    <header>
+      <div class="header-container">
+        <div class="left-nav">
+          <div class="logo">
+            <img src="assets/logo/logo.png" alt="logo" />
+          </div>
+          <nav>
+            <ul>
+              <li>Menu</li>
+              <li>Rewards</li>
+              <li>Gift Cards</li>
+            </ul>
+          </nav>
+        </div>
+        <div class="right-nav">
+          <div class="find-store">
+            <i class="fas fa-map-marker-alt">
+              <span>Find a store</span>
+            </i>
+          </div>
+          <div class="sign-in">Sign in</div>
+          <div class="join-now">Join now</div>
+        </div>
+      </div>
+    </header>
+    <div class="main-container">
+        <section class="announcements">
+            <span>
+Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus tempore adipisci nulla et cum tempora omnis molestias, rerum ullam porro!
+            </span>
+        </section>
+    </div>
+  </body>
 </html>
