--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
     />
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <header>
@@ -35,11 +36,82 @@
       </div>
     </header>
     <div class="main-container">
-        <section class="announcements">
-            <span>
-Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus tempore adipisci nulla et cum tempora omnis molestias, rerum ullam porro!
-            </span>
-        </section>
+      <section class="announcements">
+        <span>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus
+          tempore adipisci nulla et cum tempora omnis molestias, rerum ullam
+          porro!
+          <a href="#">Learn more</a>
+        </span>
+      </section>
+      <section class="rewards left-right-section">
+        <div class="text">
+          <h1>FREE COFFEE IS A TAP AWAY</h1>
+          <h3>Join noiw to start earning Rewards.*</h3>
+          <div class="cta">Join now</div>
+        </div>
+        <div class="image">
+          <img
+            src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-71056.png"
+            alt="img"
+          />
+        </div>
+      </section>
+      <!--  -->
+      <section class="chill left-right-section">
+        <div class="image">
+          <img
+            src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-72037.jpg"
+            alt="img"
+          />
+        </div>
+        <div class="text">
+          <h1>DELIGHTFULLY CHILL</h1>
+          <h3>
+            Refresh your day with the bright,tropical flavours of our StarDrink
+            and Kiwi Starfruit Starbucks Refereshers* beverage.
+          </h3>
+          <div class="cta">Order iced beverage</div>
+        </div>
+      </section>
+      <section>
+        <div class="top-bottom-section">  
+          <div class="section-container"> 
+            <div class="image">
+                <img
+                    src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-72037.jpg"
+                    alt="img"
+                />
+            </div>
+            <div class="text">
+                    <h1>DELIGHTFULLY CHILL</h1>
+                    <h3>
+                      Refresh your day with the bright,tropical flavours of our StarDrink
+                      and Kiwi Starfruit Starbucks Refereshers* beverage.
+                    </h3>
+                <div class="cta">Order iced beverage</div>
+            </div>
+          </div>
+        </div>
+        <div class="top-bottom-section">
+          <div class="section-container">
+                  <div class="image">
+                      <img
+                      src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-72037.jpg"
+                      alt="img"
+                      />
+                  </div>
+                  <div class="text">
+                      <h1>DELIGHTFULLY CHILL</h1>
+                      <h3>
+                          Refresh your day with the bright,tropical flavours of our StarDrink
+                          and Kiwi Starfruit Starbucks Refereshers* beverage.
+                      </h3>
+                      <div class="cta">Order iced beverage</div>
+                  </div>
+           </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
