--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </div>
       </div>
     </header>
+  <main>
     <div class="main-container">
       <section class="announcements">
         <span>
@@ -79,17 +80,18 @@
           <div class="section-container"> 
             <div class="image">
                 <img
-                    src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-72037.jpg"
+                    src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-70203.jpg"
                     alt="img"
                 />
             </div>
             <div class="text">
-                    <h1>DELIGHTFULLY CHILL</h1>
+                    <h1>Order and pick up. Easy as that.</h1>
                     <h3>
-                      Refresh your day with the bright,tropical flavours of our StarDrink
-                      and Kiwi Starfruit Starbucks Refereshers* beverage.
+                      Just open the app, order your favourites , and enjoy contactless pay. From there, choose whichever pickup method is best for you.
                     </h3>
-                <div class="cta">Order iced beverage</div>
+                    <div class="cta-container">
+                       <div class="cta">See pickup options</div>
+                    </div>
             </div>
           </div>
         </div>
@@ -97,21 +99,28 @@
           <div class="section-container">
                   <div class="image">
                       <img
-                      src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-72037.jpg"
+                      src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-72045.jpg"
                       alt="img"
                       />
                   </div>
                   <div class="text">
-                      <h1>DELIGHTFULLY CHILL</h1>
+                      <h1>Floating into summer like…</h1>
                       <h3>
-                          Refresh your day with the bright,tropical flavours of our StarDrink
-                          and Kiwi Starfruit Starbucks Refereshers* beverage.
+                          Keep the laid-back vibes going. Order Starbucks drinks on Uber Eats.**
                       </h3>
-                      <div class="cta">Order iced beverage</div>
+                      <div class="cta-container">
+                      <div class="cta">Order now</div>
+                    </div>
                   </div>
            </div>
         </div>
       </section>
     </div>
-  </body>
+  </main>
+  <footer>
+    <div class="footer-container">
+      
+    </div>
+  </footer>
+</body>
 </html>
