--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
       href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
     />
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="footer.css" />
   </head>
+
   <body>
     <header>
       <div class="header-container">
@@ -35,92 +37,143 @@
         </div>
       </div>
     </header>
-  <main>
-    <div class="main-container">
-      <section class="announcements">
-        <span>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus
-          tempore adipisci nulla et cum tempora omnis molestias, rerum ullam
-          porro!
-          <a href="#">Learn more</a>
-        </span>
-      </section>
-      <section class="rewards left-right-section">
-        <div class="text">
-          <h1>FREE COFFEE IS A TAP AWAY</h1>
-          <h3>Join noiw to start earning Rewards.*</h3>
-          <div class="cta">Join now</div>
-        </div>
-        <div class="image">
-          <img
-            src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-71056.png"
-            alt="img"
-          />
-        </div>
-      </section>
-      <!--  -->
-      <section class="chill left-right-section">
-        <div class="image">
-          <img
-            src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-72037.jpg"
-            alt="img"
-          />
-        </div>
-        <div class="text">
-          <h1>DELIGHTFULLY CHILL</h1>
-          <h3>
-            Refresh your day with the bright,tropical flavours of our StarDrink
-            and Kiwi Starfruit Starbucks Refereshers* beverage.
-          </h3>
-          <div class="cta">Order iced beverage</div>
-        </div>
-      </section>
-      <section>
-        <div class="top-bottom-section">  
-          <div class="section-container"> 
-            <div class="image">
+    <main>
+      <div class="main-container">
+        <section class="announcements">
+          <span>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus
+            tempore adipisci nulla et cum tempora omnis molestias, rerum ullam
+            porro!
+            <a href="#">Learn more</a>
+          </span>
+        </section>
+        <section class="rewards left-right-section">
+          <div class="text">
+            <h1>FREE COFFEE IS A TAP AWAY</h1>
+            <h3>Join noiw to start earning Rewards.*</h3>
+            <div class="cta">Join now</div>
+          </div>
+          <div class="image">
+            <img
+              src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-71056.png"
+              alt="img"
+            />
+          </div>
+        </section>
+        <!--  -->
+        <section class="chill left-right-section">
+          <div class="image">
+            <img
+              src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-72037.jpg"
+              alt="img"
+            />
+          </div>
+          <div class="text">
+            <h1>DELIGHTFULLY CHILL</h1>
+            <h3>
+              Refresh your day with the bright,tropical flavours of our
+              StarDrink and Kiwi Starfruit Starbucks Refereshers* beverage.
+            </h3>
+            <div class="cta">Order iced beverage</div>
+          </div>
+        </section>
+        <section>
+          <div class="top-bottom-section">
+            <div class="section-container">
+              <div class="image">
                 <img
-                    src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-70203.jpg"
-                    alt="img"
+                  src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-70203.jpg"
+                  alt="img"
                 />
-            </div>
-            <div class="text">
-                    <h1>Order and pick up. Easy as that.</h1>
-                    <h3>
-                      Just open the app, order your favourites , and enjoy contactless pay. From there, choose whichever pickup method is best for you.
-                    </h3>
-                    <div class="cta-container">
-                       <div class="cta">See pickup options</div>
-                    </div>
+              </div>
+              <div class="text">
+                <h1>Order and pick up. Easy as that.</h1>
+                <h3>
+                  Just open the app, order your favourites , and enjoy
+                  contactless pay. From there, choose whichever pickup method is
+                  best for you.
+                </h3>
+                <div class="cta-container">
+                  <div class="cta">See pickup options</div>
+                </div>
+              </div>
             </div>
           </div>
+          <div class="top-bottom-section">
+            <div class="section-container">
+              <div class="image">
+                <img
+                  src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-72045.jpg"
+                  alt="img"
+                />
+              </div>
+              <div class="text">
+                <h1>Floating into summer like…</h1>
+                <h3>
+                  Keep the laid-back vibes going. Order Starbucks drinks on Uber
+                  Eats.**
+                </h3>
+                <div class="cta-container">
+                  <div class="cta">Order now</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+    <footer>
+      <div class="footer-container">
+        <div class="links-container">
+          <h3>About us</h3>
+          <ul>
+            <li>Our Heritage</li>
+            <li>Our Cofee</li>
+            <li>storeis and news</li>
+            <li>Investors and Relation</li>
+            <li>Policies and Standard</li>
+          </ul>
         </div>
-        <div class="top-bottom-section">
-          <div class="section-container">
-                  <div class="image">
-                      <img
-                      src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-72045.jpg"
-                      alt="img"
-                      />
-                  </div>
-                  <div class="text">
-                      <h1>Floating into summer like…</h1>
-                      <h3>
-                          Keep the laid-back vibes going. Order Starbucks drinks on Uber Eats.**
-                      </h3>
-                      <div class="cta-container">
-                      <div class="cta">Order now</div>
-                    </div>
-                  </div>
-           </div>
+        <div class="links-container">
+          <h3>Careers</h3>
+          <ul>
+            <li>Culture and Values</li>
+            <li>Inclusion, Diversity and Equity</li>
+            <li>College Achievement and Plan</li>
+            <li>U.S. Careers</li>
+            <li>International Careers</li>
+          </ul>
         </div>
-      </section>
-    </div>
-  </main>
-  <footer>
-    <div class="footer-container">
-      
-    </div>
-  </footer>
-</body>
+        <div class="links-container">
+          <h3>Social Impact</h3>
+          <ul>
+            <li>Ethical Sourcing</li>
+            <li>Leading in Sustainability</li>
+            <li>Strengthening Communities</li>
+            <li>Creating Opportunities</li>
+            <li>Global Social Impact Report</li>
+          </ul>
+        </div>
+        <div class="links-container">
+          <h3>For Business Partners</h3>
+          <ul>
+            <li>Landlord Support Center</li>
+            <li>Suppliers</li>
+            <li>Corporate Gift Card Sales</li>
+            <li>Office and Foodservice Coffee</li>
+          </ul>
+        </div>
+        <div class="links-container">
+          <h3>Order and Pickup</h3>
+          <ul>
+            <li>Order on the App</li>
+            <li>Order on the Web</li>
+            <li>Delivery</li>
+            <li>Order and Pickup Options</li>
+            <li>Explore and Find Coffee for Home</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
