--- a/index.html
+++ b/index.html
@@ -120,6 +120,19 @@
             </div>
           </div>
         </section>
+        <section class="lgbt lgbt-section">
+          <div class="text">
+            <h1>Celebrating Pride Month</h1>
+            <h3>Join us as we celebrate the LGBTQ+ community. Read partners’ (employees) stories of connection and learn how you can be an ally.</h3>
+            <div class="cta">Learn more</div>
+          </div>
+          <div class="image">
+            <img
+              src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-72046.jpg"
+              alt="img"
+            />
+          </div>
+        </section>
       </div>
     </main>
     <footer>
